--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,7 @@ mpmath==1.2.1
 nbclient==0.5.9
 nbconvert==6.3.0
 nbformat==5.1.3
+networkx==2.6.3
 nest-asyncio==1.5.4
 nose==1.3.7
 notebook==6.4.6
