--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ MANIFEST
 experiment_results/
 experiment_results_async/
 experiment_results_snar/
+experiment_results_snar_async/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
